k8s/battle-ship-backend-depl.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: battle-ship-backend
  labels:
    app: battle-ship-backend     
spec:
  selector:
    matchLabels:
      app: battle-ship-backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: battle-ship-backend     
    spec:
      containers:
        - name: battle-ship-backend
          image: yoavdocker89/battle-ship-backend:latest
          # imagePullPolicy: Always
          ports:
          - containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: battle-ship-backend
  labels:
    app: battle-ship-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
  selector:
    app: battle-ship-backend
