k8s/portfolio-depl.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio     
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: portfolio     
    spec:
      containers:
        - name: portfolio
          image: yoavdocker89/my-portfolio:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: portfolio
