k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
    # kubernetes.io/ingress.class: public
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: yoavharel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
          - path: /battle-ship
            pathType: Prefix
            backend:
              service:
                name: battle-ship-frontend
                port:
                  number: 80
          - path: /socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: battle-ship-backend
                port:
                  number: 5000
