k8s/prometeus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 5m  
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prom.yoavharel.io
    http:
      paths:
      - backend:
          service:
            name: my-k8s-prom-stack-kube-pro-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  - host: graf.yoavharel.io
    http:
      paths:
      - backend:
          service:
            name: my-k8s-prom-stack-grafana
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
